[package]
name = "paper-events"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
itertools = "0.13"
bincode = { version = "2.0.0-rc.3", features = ["derive"] }
futures = "0.3"
rand = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ['codec'] }
bytes = "1.7.2"

[profile.release]
lto = true
